# game_2048_RL

./: .gitignore  Readme.md  pyproject.toml
env/: adapters_2048.py  batch2048_core.py
eval/: muti_eval.py  single_eval.py
train/: train_main.py  train_utils.py
