[project]
name = "game-2048-rl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.0",
    "notebook>=7.4.5",
    "rich>=14.1.0",
    "sb3-contrib>=2.7.0",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
